chore: add commitizen

--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "data-structure",
-  "module": "index.ts",
-  "devDependencies": {
-    "@commitlint/cli": "^19.0.2",
-    "@commitlint/config-conventional": "^19.0.0",
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "husky": "^9.0.11",
-    "init": "^0.1.2"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "bun commitlint --edit $1"
-    }
-  }
+	"name": "data-structure",
+	"module": "index.ts",
+	"type": "module",
+	"scripts": {
+		"commit": "cz"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^19.0.2",
+		"@commitlint/config-conventional": "^19.0.0",
+		"@types/bun": "latest",
+		"commitizen": "^4.3.0",
+		"husky": "^9.0.11"
+	},
+	"peerDependencies": {
+		"typescript": "^5.0.0"
+	},
+	"husky": {
+		"hooks": {
+			"commit-msg": "bun commitlint --edit $1"
+		}
+	}
 }
