--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
 	"module": "index.ts",
 	"type": "module",
 	"scripts": {
-		"commit": "cz"
+		"commit": "cz",
+		"linting": "eslint . --fix --ext .ts"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.0.2",
 		"@commitlint/config-conventional": "^19.0.0",
 		"@types/bun": "latest",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
 		"commitizen": "^4.3.0",
-		"husky": "^9.0.11"
+		"eslint": "^8.57.0",
+		"eslint-config-airbnb-typescript": "^17.1.0",
+		"husky": "^9.0.11",
+		"lint-staged": "^15.2.2"
 	},
 	"peerDependencies": {
 		"typescript": "^5.0.0"
