--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -29,3 +29,10 @@ jobs:
 
       - name: Run Unit Tests
         run: bun run test:unit
+
+     - name: Codecov
+        uses: codecov/codecov-action@v4.1.0
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: elshanamazov/data-structures
+            
